# databricks-mcp-agent-hello-world

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  databricks.yml  noxfile.py  pyproject.toml  workspace-config.deploy.template.yml.j2  workspace-config.example.yml
.github/scripts/: render_workspace_config.py  set_version_from_tag.py
.github/workflows/: cd-dev-on-tag.yml  ci.yml
docs/: ARCHITECTURE.md  CD_DEPLOYMENT.md  CONVERT_TEMPLATE_TO_REAL_APP.md  DATABRICKS_ADMIN_SETUP.md
evals/: sample_scenarios.json
examples/: demo_compile_task.json  demo_run_task.json  hello_world_task.json
resources/: databricks_mcp_agent_hello_world_job.yml  jobs.yml
scripts/: build_wheel.py  compile_profile.py  discover_tools.py  preflight.py  run_agent_task.py  run_evals.py  sync_version_refs.py
scripts/dev/: compile_local.sh  compile_profile.sh  discover_tools.sh  preflight.sh  run_evals.sh  run_hello_world.sh  run_local_task.sh
src/databricks_mcp_agent_hello_world/: __init__.py  cli.py  commands.py  config.py  discovery.py  job_entrypoints.py  llm_client.py  logging_utils.py  models.py  ops.py  preflight.py  versioning.py
src/databricks_mcp_agent_hello_world/app/: __init__.py  data.py  registry.py  tools.py
src/databricks_mcp_agent_hello_world/clients/: databricks.py
src/databricks_mcp_agent_hello_world/demo/: __init__.py  registry.py  tools.py
src/databricks_mcp_agent_hello_world/devtools/: version_sync.py  wheel_build.py
src/databricks_mcp_agent_hello_world/evals/: __init__.py  harness.py
src/databricks_mcp_agent_hello_world/executors/: __init__.py  factory.py
src/databricks_mcp_agent_hello_world/profiles/: compiler.py  repository.py
src/databricks_mcp_agent_hello_world/prompts/: agent_system_prompt.txt  hello_world_demo_prompt.txt  tool_audit_prompt.txt  tool_filter_prompt.txt
src/databricks_mcp_agent_hello_world/providers/: base.py  factory.py  local_python.py  managed_mcp.py
src/databricks_mcp_agent_hello_world/runner/: agent_runner.py
src/databricks_mcp_agent_hello_world/storage/: bootstrap.py  persistence_schema.py  result_repository.py  result_writer.py  schema.py  spark.py  spark_utils.py  write.py
tests/: conftest.py  helpers.py  test_agent_runner.py  test_bundle_job_config.py  test_cli.py  test_compiler_validation.py  test_config.py  test_demo_data.py  test_demo_registry.py  test_demo_selection_contract.py  test_demo_task_files.py  test_demo_tools.py  test_discovery.py  test_docs_consistency.py  test_evals.py  test_job_entrypoints.py  test_local_provider.py  test_logging_behavior.py  test_models.py  test_ops.py  test_package_entrypoints.py  test_persistence_schema.py  test_preflight.py  test_profiles_repository.py  test_pyproject_scripts.py  test_storage.py  test_storage_bootstrap.py  test_tool_registry.py  test_version_sync.py  test_versioning.py
tests/contract/: test_agent_runner.py  test_agent_runner_additional.py  test_app_registry.py  test_bundle_wiring.py  test_evals.py  test_local_python_provider.py  test_storage_bootstrap.py  test_storage_schema.py  test_storage_write.py
tests/fixtures/evals/: above_max_tool_calls.json  (+18 more)
tests/unit/: test_app_data.py  test_app_tools.py  test_cli.py  test_cli_additional.py  test_commands.py  test_config.py  test_config_additional.py  test_discovery.py  test_logging_behavior.py  test_models.py  test_package_entrypoints.py  test_preflight.py  test_preflight_additional.py  test_runtime_support_modules.py  test_schema_and_versioning_additional.py  test_version_sync.py  test_versioning.py  test_wheel_build.py
(+4 files in other folders)
