[project]
name = "databricks-mcp-agent-hello-world"
version = "0.1.0"
description = "Provider-agnostic, non-interactive Databricks LLM agent template with local code tools and future MCP compatibility."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "databricks-sdk>=0.60.0",
  "databricks-openai>=0.4.0",
  "pydantic>=2.8.2",
  "PyYAML>=6.0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[project.scripts]
compile_tool_profile = "databricks_mcp_agent_hello_world.cli:compile_tool_profile_entrypoint"
run_agent_task = "databricks_mcp_agent_hello_world.cli:run_agent_task_entrypoint"
preflight = "databricks_mcp_agent_hello_world.cli:preflight_entrypoint"
discover-tools = "databricks_mcp_agent_hello_world.cli:discover_tools_entrypoint"
compile-tool-profile = "databricks_mcp_agent_hello_world.cli:compile_tool_profile_entrypoint"
run-agent-task = "databricks_mcp_agent_hello_world.cli:run_agent_task_entrypoint"
run-evals = "databricks_mcp_agent_hello_world.cli:run_evals_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_mcp_agent_hello_world"]

[tool.hatch.build.targets.wheel.force-include]
"src/databricks_mcp_agent_hello_world/prompts" = "databricks_mcp_agent_hello_world/prompts"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
