[project]
name = "databricks-mcp-agent-hello-world"
version = "0.1.0"
description = "Provider-agnostic, non-interactive Databricks LLM agent template with local code tools and future MCP compatibility."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "databricks-sdk>=0.60.0",
  "databricks-openai>=0.4.0",
  "pydantic>=2.8.2",
  "pyarrow>=18.0.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.13.5",
  "pytest>=8.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.8.0",
  "build>=1.2.0",
  "pre-commit>=4.0.0",
  "nox>=2024.4.15",
]

[project.scripts]
preflight = "databricks_mcp_agent_hello_world.cli:preflight_entrypoint"
discover-tools = "databricks_mcp_agent_hello_world.cli:discover_tools_entrypoint"
run-agent-task = "databricks_mcp_agent_hello_world.cli:run_agent_task_entrypoint"
run-evals = "databricks_mcp_agent_hello_world.cli:run_evals_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_mcp_agent_hello_world"]

[tool.hatch.build.targets.wheel.force-include]
"src/databricks_mcp_agent_hello_world/prompts" = "databricks_mcp_agent_hello_world/prompts"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = """
--cov=databricks_mcp_agent_hello_world
--cov-report=term-missing
--cov-report=xml
--cov-fail-under=100
"""
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/databricks_mcp_agent_hello_world"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.coverage.paths]
source = [
  "src/databricks_mcp_agent_hello_world",
  "*/site-packages/databricks_mcp_agent_hello_world",
]
